Ignore checksums for chocolatey

--- a/roles/windows-workstation/tasks/main.yml
+++ b/roles/windows-workstation/tasks/main.yml
@@ -14,6 +14,7 @@
   - name: Install Visual Studio Code, Git, and Putty
     win_chocolatey:
       name: "{{ item }}"
+      ignore_checksums: true
     with_items:
       - visualstudiocode
       - git
